# vacs

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  deny.toml  release-please-config.json
.github/: dependabot.yml
.github/workflows/: ci-node.yml  ci-rust.yml  release-client.yml  release-please.yml  release-server.yml  server.yml
docs/: release-verification.md  rpm-signing-key.pem
src/: decode.rs  main.rs
src/webrtc/: peer.rs
vacs-audio/: CHANGELOG.md  Cargo.toml
vacs-audio/src/: config.rs  device.rs  dsp.rs  error.rs  input.rs  lib.rs  output.rs  sources.rs
vacs-audio/src/sources/: opus.rs  waveform.rs
vacs-audio/src/stream/: capture.rs  playback.rs
vacs-client/: CHANGELOG.md  Cargo.toml  build.rs  package-lock.json  package.json  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json
vacs-client/capabilities/: default.json
vacs-client/docs/config/: stations.md
vacs-client/frontend/: eslint.config.ts  package.json  tsconfig.node.json
vacs-client/frontend/src/: App.tsx  error.ts  main.tsx
vacs-client/frontend/src/components/: AudioHostSelector.tsx  CallList.tsx  CallQueue.tsx  Clock.tsx  DAKeyArea.tsx  DeviceSelector.tsx  DialPad.tsx  FunctionKeys.tsx  IncomingList.tsx  InfoGrid.tsx  TopButtonRow.tsx  TransmitModeSettings.tsx  UpdateOverlay.tsx  VolumeSettings.tsx  top-button-row.tsx
vacs-client/frontend/src/components/settings/: InputLevelMeter.tsx
vacs-client/frontend/src/components/ui/: Button.tsx  DAKey.tsx  EndButton.tsx  InputLevelMeter.tsx  KeyCapture.tsx  LinkButton.tsx  PhoneButton.tsx  RadioPrioButton.tsx  Select.tsx  StatusIndicator.tsx  VolumeSlider.tsx
vacs-client/frontend/src/hooks/: call-list-hook.ts  debounce-hook.ts  dial-pad-hook.ts  event-callback-hook.ts
vacs-client/frontend/src/listeners/: auth-listener.ts  signaling-listener.ts  webrtc-listener.ts
vacs-client/frontend/src/pages/: ConnectPage.tsx  LoginPage.tsx  MainPage.tsx  MissionPage.tsx  SettingsPage.tsx
vacs-client/frontend/src/stores/: auth-store.ts  call-list-store.ts  call-store.ts  capabilities-store.ts  signaling-store.ts  update-store.ts
vacs-client/frontend/src/styles/: call-list.css  info-grid.css  main.css
vacs-client/frontend/src/types/: audio.ts  capabilities.ts  client-info.ts  transmit.ts
vacs-client/src/: app.rs  audio.rs  auth.rs  build.rs  commands.rs  config.rs  error.rs  keybinds.rs  lib.rs  main.rs  platform.rs  radio.rs  secrets.rs  signaling.rs  state.rs  webrtc.rs  ws.rs
vacs-client/src/app/: commands.rs  state.rs  window.rs
vacs-client/src/app/state/: audio.rs  http.rs  signaling.rs  webrtc.rs
vacs-client/src/audio/: commands.rs  manager.rs
vacs-client/src/commands/: auth.rs
vacs-client/src/keybinds/: commands.rs  engine.rs  runtime.rs
vacs-client/src/keybinds/runtime/: macos.rs  stub.rs  windows.rs
vacs-client/src/keybinds/runtime/macos/: emitter.rs
vacs-client/src/keybinds/runtime/windows/: listener.rs
vacs-client/src/radio/: push_to_talk.rs
vacs-client/src/secrets/: cookies.rs
vacs-client/src/signaling/: auth.rs  commands.rs
vacs-core/: Cargo.toml
vacs-core/src/: lib.rs  signaling.rs
vacs-core/src/signaling/: client.rs  matcher.rs
vacs-core/src/webrtc/: mod.rs
vacs-macros/: Cargo.toml
vacs-macros/src/: lib.rs
vacs-protocol/: CHANGELOG.md  Cargo.toml
vacs-protocol/src/: http.rs  lib.rs  ws.rs
vacs-protocol/src/http/: auth.rs  version.rs  ws.rs
vacs-server/: CHANGELOG.md  Cargo.toml  Dockerfile
vacs-server/src/: app.rs  auth.rs  config.rs  http.rs  lib.rs  main.rs  metrics.rs  release.rs  routes.rs  session.rs  state.rs  store.rs  users.rs  ws.rs
vacs-server/src/auth/: layer.rs  users.rs
vacs-server/src/http/: auth.rs  error.rs  session.rs  ws.rs
vacs-server/src/release/: catalog.rs  policy.rs
vacs-server/src/release/catalog/: file.rs
vacs-server/src/routes/: auth.rs  health.rs  root.rs  version.rs  ws.rs
vacs-server/src/store/: memory.rs  redis.rs
vacs-server/src/test_utils/: test_app.rs  test_client.rs  ws.rs
vacs-server/src/ws/: application_message.rs  auth.rs  client.rs  handler.rs  message.rs  test_util.rs
vacs-server/tests/: auth.rs  call.rs  client.rs  websocket.rs
vacs-server/tests/common/: mod.rs
vacs-signaling/: CHANGELOG.md  Cargo.toml
vacs-signaling/src/: client.rs  error.rs  lib.rs  matcher.rs  test_utils.rs  transport.rs
vacs-signaling/src/test_utils/: messages.rs  test_rig.rs
vacs-signaling/src/transport/: mock.rs  tokio.rs
vacs-signaling/tests/: auth.rs  calls.rs
vacs-vatsim/: Cargo.toml
vacs-vatsim/src/: data_feed.rs  lib.rs  oauth.rs  slurper.rs
vacs-vatsim/src/data_feed/: mock.rs  vatsim.rs
vacs-vatsim/src/oauth/: connect.rs  mock.rs
vacs-webrtc/: Cargo.toml
vacs-webrtc/src/: config.rs  lib.rs  peer.rs  receiver.rs  sender.rs
