[workspace]
resolver = "3"
members = ["vacs-audio", "vacs-client", "vacs-protocol", "vacs-server", "vacs-signaling", "vacs-vatsim", "vacs-webrtc"]

[workspace.package]
version = "0.0.0"
edition = "2024"
publish = false

[workspace.dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
bytes = "1.10.1"
config = "0.15.11"
directories = "6.0.0"
futures-util = "0.3.31"
pretty_assertions = "1.4.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
test-log = { version = "0.2.17", features = ["trace"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros", "signal"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[workspace.lints]
