[package]
name = "vacs-audio"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
cpal = "0.16.0"
opus = "0.3.0"
ringbuf = "0.4.8"
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
