[package]
name = "vacs-vatsim"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
csv = "1.3.1"
reqwest = "0.12.19"
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
test-log = { workspace = true }
tokio = { workspace = true }
wiremock = "0.6.3"

[lints]
workspace = true
