[package]
name = "vacs-vatsim"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
csv = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
test-log = { workspace = true }
tokio = { workspace = true }
wiremock = { workspace = true }

[lints]
workspace = true
