[package]
name = "vacs-vatsim"
version.workspace = true
edition.workspace = true
publish.workspace = true

[features]
default = []
test-utils = []

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
csv = { workspace = true }
parking_lot = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
test-log = { workspace = true }
tokio = { workspace = true }
wiremock = { workspace = true }

[lints]
workspace = true
