[package]
name = "vacs-webrtc"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
vacs-audio = { path = "../vacs-audio" }
webrtc = "0.13.0"

[lints]
workspace = true
