[package]
name = "vacs-webrtc"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
vacs-audio = { workspace = true }
webrtc = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
